--- a/pa1/AUTHORS
+++ b/pa1/AUTHORS
@@ -1,1 +1,4 @@
 Marcel Kyas <marcel@ru.is>
+Fannar Thor Ragnarsson <Fannarr15@ru.is>
+Fridrik Thor Hjalmarsson <Fridrik14@ru.is>
+Gunnlaugur Kristinn Hreidarsson <Gunnlaugur15@ru.is>
